<resources>
    <string name="app_name">Aux</string>
    <string name="hint_ipaddr">Server IP address</string>
    <string name="hint_portnum">Server port number</string>
    <string name="label_connect_button">Connect</string>
    <string name="error_ipaddr_invalid">Invalid IP address</string>
    <string name="error_portnum_invalid">Invalid port number</string>
    <string name="error_cantconnect">Could not connect to given IP address and port number.</string>
    <string name="hint_search_songs">Search songs…</string>
    <string name="label_menu_search">Search</string>
    <string name="error_internet_needwifi">Wi-Fi connection required.</string>
    <string name="notif_server_error">An error occurred, try reconnecting.</string>
    <string name="queued_feedback">Queued successfully.</string>
    <string name="swapped_feedback">Swapped successfully.</string>
    <string name="user_song_playing_feedback">Your song is now playing.</string>
    <string name="view_action">View</string>
    <string name="snackbar_action_wifi_settings">Turn on</string>
    <string name="label_queuedsong_position">%d.</string>
    <string name="label_connect_fragment">Connect</string>
    <string name="label_pager_fragment">Aux</string>
    <string name="server_disconnected_message">Disconnected: %s</string>
    <string name="progress_getting_songs">Getting songs…</string>
    <string name="progress_getting_queue">Getting queue…</string>
    <string name="label_owner_id">User:</string>
    <string name="title_edit_nick">Edit nickname</string>
    <string name="action_reset">Reset</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_apply">Apply</string>
    <string name="nickname_info">Set a nickname for this user. Only you will be able to see it.</string>
    <string name="channel_name">Player status</string>
    <string name="channel_description">What song is currently playing, what song is next…</string>
    <string name="now_playing">Now playing</string>

    <string-array name="labels_fragments">
        <item>Songs</item>
        <item>Queue</item>
    </string-array>
</resources>
