<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_elevation_8dp">
    <TextView
        android:id="@+id/labelDialogTitle"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_high_emphasis"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_edit_nick"/>
    <TextView
        android:id="@+id/labelDialogInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nickname_info"
        android:textSize="18sp"
        android:textColor="@color/text_med_emphasis"
        app:layout_constraintTop_toBottomOf="@id/labelDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>
    <EditText
        android:id="@+id/etNickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="8dp"
        android:maxLength="32"
        app:layout_constraintTop_toBottomOf="@id/labelDialogInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnReset"
        tools:text="Bruncica mala"/>
    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/action_reset"
        android:layout_marginStart="8dp"/>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/action_cancel"
        app:layout_constraintEnd_toStartOf="@id/btnApply"/>
    <Button
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/action_apply" />
</androidx.constraintlayout.widget.ConstraintLayout>